--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,17 @@
     "target": "ES2022",
     "module": "Node16",
     "moduleResolution": "Node16",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
+    "declaration": true,
+    "sourceMap": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "outDir": "./dist",
-    "rootDir": ".",
     "isolatedModules": true
   },
-  "include": [
-    "./**/*.ts"
-  ],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*"],
+  "exclude": ["tests/**/*", "dist/**/*"]
 }
