docs(phase-7): add README, CHANGELOG, update package.json files field
README covers all 10 required sections: what/why, Slack app setup,
installation, MCP config, identity system, rate limiting, 17-tool
reference, message logging, troubleshooting, and security note.
CHANGELOG documents all v0.1.0 additions. Package.json files field
updated to include config/, README.md, LICENSE, CHANGELOG.md in
npm tarball.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist/"
+    "dist",
+    "config",
+    "README.md",
+    "LICENSE",
+    "CHANGELOG.md"
   ],
   "scripts": {
     "build": "tsc",
